# ai-os

./: README.md  config.yaml  pi_ai_os.py  pyproject.toml
.github/workflows/: pythonpublish.yml
assets/: add-streaming-to-gemini.md
